--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,21 @@ a:hover {
   display: inline-block;
 }
 
+ul.privacy-policy li {
+  margin-left: 40px;
+  list-style: square;
+  padding-bottom: 12px;
+}
+
+ol.privacy-policy li {
+  margin-left: 40px;
+  list-style: decimal;
+}
+
+h3.privacy-policy {
+  padding-top: 40px;
+}
+
 ol,
 ul {
   margin: 0;
